--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs
+spring.datasource.url=jdbc:mysql://localhost:3306/techjobs?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=techjobs
 spring.datasource.password=techjobs1234
 
